# karstkit

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  FEATURE_TASK_LIST.md  LICENSE  Makefile  PRD.md  README.md  env.example  pyproject.toml  repos.yaml  requirements.txt  working-demo.yaml
.github/workflows/: e2e-deployment-test.yml
iac_wrapper/: __init__.py  api.py  auth.py  cli.py  config.py  controlplane.py  dockerize.py  envoy.py  gitops.py  slug.py
iac_wrapper/grpc_pb/: controlplane_pb2.py  controlplane_pb2_grpc.py
infra/: main.tf  outputs.tf  variables.tf
infra/templates/: app.Dockerfile.tmpl  envoy.yaml.tmpl
proto/: controlplane.proto
tests/: E2E_DEPLOYMENT_TEST.md  conftest.py  test_api.py  test_api_auth.py  test_cli.py  test_cli_e2e_integration.py  test_config.py  test_controlplane.py  test_dockerize.py  test_e2e_deployment_pipeline.py  test_e2e_flask_dashboard.py  test_e2e_flask_simple.py  test_envoy.py  test_gitops.py  test_integration_deploy.py  test_slug.py
